--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/resources/lib/bootstrap-ecommerce-uikit/css/responsive.css" rel="stylesheet" media="only screen and (max-width: 1200px)" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="~/resources/lib/paged-list/paged-list.css" />
+    <link rel="stylesheet" href="~/resources/lib/bootstrap-ecommerce-uikit/ui-ecommerce/plugins/fancybox/fancybox.min.css"  />
     <link rel="stylesheet" href="~/css/site.css" />
 </environment>
 <body>
@@ -41,6 +42,7 @@
         <script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
         <script src="/resources/lib/popper1.14.6/popper.min.js"></script>
         <script src="/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
+        <script src="~/resources/lib/bootstrap-ecommerce-uikit/ui-ecommerce/plugins/fancybox/fancybox.min.js"></script>
         <script src="~/js/ActionsClient.js"></script>
     </environment>
     @RenderSection("Scripts", required: false)
