--- a/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse">
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse mt-4">
                 <div class="sidebar-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
