--- a/mvCommerce/Areas/Collaborator/Views/Product/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model X.PagedList.IPagedList<mvCommerce.Models.Product>
+﻿@model X.PagedList.IPagedList<mvCommerce.Models.ProductAggregator.Product>
 @{
     ViewData["Title"] = "Index";
     var search = Context.Request.Query["search"];
