--- a/mvCommerce/Areas/Collaborator/Views/_ViewImports.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using mvCommerce
 @using mvCommerce.Models
-@using X.PagedList.Mvc.Core; 
+@using mvCommerce.Models.ProductAggregator
+@using X.PagedList.Mvc.Core;
 @using X.PagedList;
 @using mvCommerce.Models.Constants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
