--- a/mvCommerce/Views/Product/Visualize.cshtml
+++ b/mvCommerce/Views/Product/Visualize.cshtml
@@ -1,4 +1,4 @@
-﻿@model mvCommerce.Models.Product
+﻿@model mvCommerce.Models.ProductAggregator.Product
 
 <br  style="clear:both" />
 <br  style="clear:both" />
