--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -53,7 +53,7 @@
                                     </div> <!-- price-wrap .// -->
                                 </td>
                                 <td class="text-right">
-                                <a href="" class="btn btn-outline-danger"> × Remove</a>
+                                <a asp-controller="ShoppingCart" asp-action="RemoveItem" asp-route-id="@item.Id" class="btn btn-outline-danger"> × Remover</a>
                                 </td>
                             </tr>
 
