--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -7,6 +7,8 @@
     <section class="container" id="order" style="margin-top: 50px">
 
         <h2 class="title-doc">Meu Carrinho</h2>
+      <!-- Show error message -->  <div class="alert alert-danger text-center" style="display:none" role="alert"> </div>
+       
         <div id="code_cart">
             <div class="card">
                 <table class="table table-hover shopping-cart-wrap">
