Implementing ajax calculate freight

--- a/mvCommerce/Views/Home/Index.cshtml
+++ b/mvCommerce/Views/Home/Index.cshtml
@@ -76,9 +76,9 @@
     <div class="container" id="formNewsletter">
         <div class="row">
             <div class="col-sm-8 offset-sm-3" style="text-align:center">
-                @if (TempData["MSG_S"] != null)
+                @if (TempData["MSG_S_Newsletter"] != null)
                 {
-                    <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
+                    <p class="alert alert-success text-center col-md-10"><b>@TempData["MSG_S_Newsletter"]</b></p>
                 }
             </div>
         </div>
