--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -100,16 +100,19 @@
                     <div class="box">
                         <dl class="dlist-align">
                             <dt>CEP:  </dt>
-                            <dd><input class="form-control" type="text" name="cep" /></dd>
+                            <dd><input class="form-control cep" type="text" name="cep" /><a href="" class="btn btn-outline-info btn-calc-freight">OK</a></dd>
                         </dl>
-                        <dl class="dlist-align">
+                    <div class="container-freight">
+
+                    </div>
+                        @*<dl class="dlist-align">
                             <dt><input type="radio" name="frete" value="sedex" /> </dt>
                             <dd>SEDEX - R$ 99,95</dd>
                         </dl>
                         <dl class="dlist-align">
                             <dt><input type="radio" name="frete" value="pac" /></dt>
                             <dd>PAC - R$ 67,30</dd>
-                        </dl>
+                        </dl>*@
                     </div> <!-- box.// -->
                 </div> <!-- code-wrap.// -->
             </aside>
