--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
     <environment include="Development">
         <script src="/resources/lib/holder/holder.min.js"></script>
         <script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
+        <script src="~/resources/lib/mask/jquery.mask.min.js"></script>
         <script src="/resources/lib/popper1.14.6/popper.min.js"></script>
         <script src="/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
         <script src="~/resources/lib/bootstrap-ecommerce-uikit/ui-ecommerce/plugins/fancybox/fancybox.min.js"></script>
