Adjusts in AJAX function

--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -92,7 +92,7 @@
     <section class="container">
         <div class="row">
 
-            <aside class="col-md-4">
+            <aside class="col-md-5">
                 <h4 class="subtitle-doc">
                     Frete
                 </h4>
@@ -100,19 +100,13 @@
                     <div class="box">
                         <dl class="dlist-align">
                             <dt>CEP:  </dt>
-                            <dd><input class="form-control cep" type="text" name="cep" /><a href="" class="btn btn-outline-info btn-calc-freight">OK</a></dd>
+                            <div class="input-group-prepend">
+                                <input class="form-control cep col-md-6" type="text" name="cep" /><a href="#" class="btn btn-outline-info btn-calc-freight ml-2">OK</a>
+                            </div>
                         </dl>
                     <div class="container-freight">
 
                     </div>
-                        @*<dl class="dlist-align">
-                            <dt><input type="radio" name="frete" value="sedex" /> </dt>
-                            <dd>SEDEX - R$ 99,95</dd>
-                        </dl>
-                        <dl class="dlist-align">
-                            <dt><input type="radio" name="frete" value="pac" /></dt>
-                            <dd>PAC - R$ 67,30</dd>
-                        </dl>*@
                     </div> <!-- box.// -->
                 </div> <!-- code-wrap.// -->
             </aside>
