--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -94,14 +94,16 @@
 
             <aside class="col-md-5">
                 <h4 class="subtitle-doc">
-                    Frete
+                    Calcular frete
                 </h4>
                 <div id="code_desc_align" class="box">
-                    <div class="box">
+                    <div class="box text-center">
                         <dl class="dlist-align">
                             <dt>CEP:  </dt>
                             <div class="input-group-prepend">
-                                <input class="form-control cep col-md-6" type="text" name="cep" /><a href="#" class="btn btn-outline-info btn-calc-freight ml-2">OK</a>
+                                <input class="form-control cep col-md-6" type="text" name="cep" placeholder="00.000-000"/>
+                                <a href="#" class="btn btn-outline-info btn-calc-freight ml-2">OK</a>
+
                             </div>
                         </dl>
                     <div class="container-freight">
