--- a/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Index.cshtml
@@ -5,8 +5,11 @@
 
 @if (TempData["MSG_S"] != null)
 {
-    <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
+    <p class="alert alert-success text-center col-md-8" style="margin:auto; font-size:larger"><b>@TempData["MSG_S"]</b></p>
 }
+<br />
+<br />
+<br />
 <h1>Categorias</h1>
 <br />
 <br />
@@ -16,7 +19,7 @@
 @if (Model.Count > 0)
 {
     <div class="table-responsive" style="margin-top:10px">
-        <table class="table table-bordered"> 
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th scope="col">@Html.DisplayNameFor(model => model.First().Id)</th>
