--- a/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
@@ -3,11 +3,13 @@
     ViewData["Title"] = "Index";
     var search = Context.Request.Query["search"];
 }
-
 @if (TempData["MSG_S"] != null)
 {
-    <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
+    <p class="alert alert-success text-center col-md-8" style="margin:auto; font-size:larger"><b>@TempData["MSG_S"]</b></p>
 }
+<br />
+<br />
+<br />
 <h1>Colaboradores</h1>
 <br />
 <br />
