--- a/mvCommerce/Areas/Collaborator/Views/Product/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Index.cshtml
@@ -5,9 +5,11 @@
 }
 @if (TempData["MSG_S"] != null)
 {
-    <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
+    <p class="alert alert-success text-center col-md-8" style="margin:auto; font-size:larger"><b>@TempData["MSG_S"]</b></p>
 }
-
+<br />
+<br />
+<br />
 <h1>Produtos</h1>
 
 <br />
