Update freight field

--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -125,11 +125,11 @@
                         </dl>
                         <dl class="dlist-align">
                             <dt>Frete:</dt>
-                            <dd class="text-right">R$ 67,30</dd>
+                            <dd class="text-right freight">R$ 0,00</dd>
                         </dl>
                         <dl class="dlist-align">
                             <dt>TOTAL:</dt>
-                            <dd class="text-right">187,30</dd>
+                            <dd class="text-right total">R$ 0,00</dd>
                         </dl>
                     </div> <!-- box.// -->
                 </div> <!-- code-wrap.// -->
