--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -115,21 +115,20 @@
             <aside class="col-md-4">
                 <h4 class="subtitle-doc">
                     Resumo
-                    <a href="#" data-html="code_desc_right" class="showcode">[code]</a>
                 </h4>
                 <div id="code_desc_right" class="box">
                     <div class="box">
                         <dl class="dlist-align">
                             <dt>Subtotal: </dt>
-                            <dd class="text-right subtotal">@subTotal.ToString("C")</dd>
+                            <dd class="text-right resume subtotal text-center">@subTotal.ToString("C")</dd>
                         </dl>
                         <dl class="dlist-align">
                             <dt>Frete:</dt>
-                            <dd class="text-right freight">R$ 0,00</dd>
+                            <dd class="text-right resume freight text-center">R$ 0,00</dd>
                         </dl>
                         <dl class="dlist-align">
                             <dt>TOTAL:</dt>
-                            <dd class="text-right total">R$ 0,00</dd>
+                            <dd class="text-right resume total text-center">R$ 0,00</dd>
                         </dl>
                     </div> <!-- box.// -->
                 </div> <!-- code-wrap.// -->
