--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -105,6 +105,11 @@ li#categories{
     height: 40px;
     width: 40px
 }
+.resume {
+    border:1px solid;
+    border-color:red;
+    border-radius: 0px 6px 0px 6px;
+}
 /**
 * CSS - Menu Multilevel Bootstrap 4
 */
