Adding cookie and button 'continuar' in shopping cart

--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -84,8 +84,8 @@
                         }
                     </tbody>
                 </table>
-            </div> <!-- card.// -->
-        </div> <!-- code-wrap.// -->
+            </div>
+        </div>
     </section>
     <br />
     <br />
@@ -107,10 +107,9 @@
                             </div>
                         </dl>
                     <div class="container-freight">
-
                     </div>
-                    </div> <!-- box.// -->
-                </div> <!-- code-wrap.// -->
+                    </div>
+                </div> 
             </aside>
             <aside class="col-md-4">
                 <h4 class="subtitle-doc">
@@ -130,8 +129,11 @@
                             <dt>TOTAL:</dt>
                             <dd class="text-right resume total text-center">R$ 0,00</dd>
                         </dl>
-                    </div> <!-- box.// -->
-                </div> <!-- code-wrap.// -->
+                    </div>
+                </div> 
+            </aside>
+            <aside class="col-md-4">
+               <a class="btn btn-info disabled btn-continue" href="#">Continuar</a>
             </aside>
         </div>
     </section>
